# scalar-autograd-engine

./: CMakeLists.txt  LICENSE  README.md
Include/: Engine.h  Function.h  Value.h
Source/: Bindings.cpp  Engine.cpp  Function.cpp  Main.cpp  Value.cpp
